--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -25,7 +25,7 @@ clap = { version = "4", features = ["derive"] }
 diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
 diesel_migrations = { version = "2", features = ["sqlite"] }
 dirs-next = "2.0.0"
-dotenv = "0.15.0"
+dotenvy = "0.15.0"
 env_logger = "0.11"
 log = "0.4.17"
 rand = "0.8.5"
