--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,9 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - name: Install dependencies
       run: sudo apt-get install libsodium-dev libsqlite3-dev libzstd-dev
     - name: Build
@@ -25,9 +27,20 @@ jobs:
     name: clippy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - name: Install dependencies
       run: sudo apt-get install libsodium-dev libsqlite3-dev libzstd-dev
     - name: Run clippy
       #run: cargo clippy --all --lib --tests -- --deny warnings
       run: cargo clippy --all --lib --tests
+
+  fmt:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
+    - name: Run cargo fmt
+      run: cargo fmt --all -- --check
