--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -33,5 +33,6 @@ rebuilderd-common = { version= "=0.23.0", path="../common" }
 serde = { version="1.0.137", features=["derive"] }
 serde_json = "1.0.81"
 toml = "0.8"
+zstd = "0.13.3"
 
 # https://crates.io/crates/deb-version
