--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -23,7 +23,7 @@ actix-web = "4.1.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = { version = "4", features = ["derive", "env"] }
 data-encoding = "2"
-diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
+diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "returning_clauses_for_sqlite_3_35"] }
 diesel_migrations = { version = "2", features = ["sqlite"] }
 dirs-next = "2.0.0"
 dotenvy = "0.15.0"
