--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -20,16 +20,17 @@ assets = [
 [dependencies]
 async-trait = "0.1.56"
 clap = { version = "4", features = ["derive", "env"] }
+chrono = { version = "0.4.19", features = ["serde"] }
 data-encoding = "2"
 env_logger = "0.11"
 futures = "0.3.21"
 futures-util = "0.3.21"
 in-toto = "0.4"
 nix = { version = "0.30", features = ["process", "signal"] }
-rebuilderd-common = { version= "=0.25.0", path="../common" }
-serde = { version="1.0.137", features=["derive"] }
+rebuilderd-common = { version = "=0.25.0", path = "../common" }
+serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 tempfile = "3.3.0"
-tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
 toml = "0.9"
 url = "2.2.2"
