--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -17,7 +17,7 @@ colored = "3"
 diesel = { version = "2", features = ["sqlite"], optional = true }
 dirs-next = "2.0.0"
 log = "0.4.17"
-reqwest = { version = "0.12", features = ["blocking", "json", "stream", "rustls-tls-native-roots"], default-features = false }
+reqwest = { version = "0.12", features = ["blocking", "json", "stream", "rustls-tls-native-roots", "zstd"], default-features = false }
 serde = { version = "1.0.137", features = ["derive"] }
 toml = "0.9"
 url = "2.2.2"
