--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -22,11 +22,13 @@ assets = [
 actix-web = "4.1.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
+data-encoding = "2"
 diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
 diesel_migrations = { version = "2", features = ["sqlite"] }
 dirs-next = "2.0.0"
 dotenvy = "0.15.0"
 env_logger = "0.11"
+in-toto = "0.4.0"
 log = "0.4.17"
 rand = "0.9"
 rebuilderd-common = { version = "=0.23.0", path = "../common" }
