--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4", features = ["derive"] }
 colored = "3"
 env_logger = "0.11"
 futures = "0.3.21"
+in-toto = "0.4.0"
 rebuilderd = { version= "=0.24.0", path="../daemon" }
 rebuilderd-common = { version= "=0.23.0", path="../common" }
 tempfile = "3.3.0"
