--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -16,5 +16,6 @@ futures = "0.3.21"
 in-toto = "0.4.0"
 rebuilderd = { version= "=0.24.0", path="../daemon" }
 rebuilderd-common = { version= "=0.23.0", path="../common" }
+serde_json = "1"
 tempfile = "3.3.0"
 tokio = { version="1.19.2", features=["macros", "rt-multi-thread"] }
